# pydf

./: .gitignore  CHANGES  INSTALL  README  README.md  pydf  pydf.1  pydfrc  pyproject.toml
.github/workflows/: smoke-tests.yml
attic/: gs.py
debian/: changelog  control  copyright  dirs  files  install  manpages  menu  rules  watch
